# macau-tourist-flow-public

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: baseline.yaml  exp01_graph_sanity.yaml  exp02_baseline.yaml  exp03_solver_validation.yaml  exp04_calibration_recovery.yaml  exp05_real_calibration.yaml  exp06_sensitivity.yaml  exp07_entrance_metering.yaml  exp08_routing.yaml  exp09_combined.yaml  exp10_baselines.yaml  exp11_validity_scope.yaml  exp12_convergence.yaml
data/: README.md
data/raw/: MANIFEST.txt
docs/: 02_literature_review.md  03_methodology.md  04_data_sources.md  05_experiment_plan.md  08_validity_scope.md  09_baselines.md  10_interventions.md  11_convergence.md  12_gradient_analysis.md  ARCHITECTURE.md  README.md
figures/: results_table.csv  results_table.md
src/: __init__.py  ingest_data.py  run_exp01.py  run_exp02.py  run_exp03.py  run_exp04.py  run_exp05.py  run_exp06.py  run_exp07.py  run_exp08.py  run_exp09.py  run_exp10.py  run_exp11.py  run_exp12_convergence.py
src/calibration/: __init__.py  bootstrap.py  estimator.py  gradient_check.py
src/evaluation/: __init__.py  generate_figures.py  metrics.py
src/models/: __init__.py  (+3 more)
tests/: test_arrival_profiles.py  test_attractions.py  test_baseline_random.py  test_baselines.py  test_bootstrap.py  test_calibration_estimator.py  test_compliance.py  test_data_loaders.py  test_entrance_metering.py  test_exp05_data_prep.py  test_flow_metrics.py  test_generate_figures.py  test_gradient_check.py  test_graph_loader.py  test_io.py  test_mfg_solver.py  test_pipeline_integration.py  test_routing.py  test_sensitivity.py  test_synthetic_arrivals.py
(+12 files in other folders)
