[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macau-tourist-flow"
version = "0.1.0"
description = "Mean Field Game modeling of tourist flow at Macau heritage attractions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
# Dependencies intentionally empty — managed by conda environment.yml
# pip install -e . is only for registering src/ as the package root
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "black", "pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that require network access or large computation",
    "integration: marks tests that exercise the full pipeline",
]
